--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
- 
+
+
+/* mixins, variables, etc. */
+
+$gray-medium-light: #eaeaea;
+
+
 /* universal */
 
 html {
@@ -21,10 +27,9 @@ textarea {
 
 .center {
 	text-align: center;
-}
-
-.center h1 {
+	h1 {
 	margin-bottom: 60px;
+	}
 }
 
 /* typography */
@@ -46,7 +51,7 @@ h2 {
 	margin-bottom: 30px;
 	text-align: center;
 	font-weight: normal;
-	color: #777;
+	color: $gray-light;
 }
 
 p {
@@ -65,40 +70,35 @@ p {
 	letter-spacing: -1px;
 	padding-top: 9px;
 	font-weight: bold;
+	&:hover {
+		color: #fff;
+		text-decoration: none;
+	}
 }
 
-#logo:hover {
-	color: #fff;
-	text-decoration: none;
-}
 
 /* footer */
 
 footer {
 	margin-top: 45px;
 	padding-top: 5px;
-	border-top: 1px solid #eaeaea;
-	color: #777;
-}
-
-footer a {
-	color: #555;
-
-}
-footer a:hover {
-	color: #222;
-}
-
-footer small {
-	float:left;
-}
-
-footer ul {
-	float: right;
-	list-style: none;
-}
-
-footer ul li {
-	float: left;
-	margin-left: 15px
+	border-top: 1px solid $gray-medium-light;
+	color: $gray-light;
+	a {
+		color: $gray;
+		&:hover {
+			color: $gray-darker;
+	  }
+	}
+	small {
+		float:left;
+	}
+	ul {
+		float: right;
+		list-style: none;
+		li {
+			float: left;
+			margin-left: 15px
+		}
+	}
 }
